<resources>
    <string name="app_name">Demo</string>
    <string name="btn_database">数据库示例</string>
    <string name="btn_content_provider">内容提供器示例</string>
    <string name="btn_read_contacts">读取联系人</string>
    <string name="btn_read_messages">读取短信</string>
    <string name="btn_clear_list">清除列表</string>
    <string name="btn_custom_view">自定义控件</string>
    <string name="btn_motion_event">Motion Event</string>
    <string name="btn_scroll">Scroll示例</string>
    <string name="btn_xml_paint">Xml绘图</string>
    <string name="btn_insert">插入数据</string>
    <string name="btn_query">查询数据</string>
    <string name="btn_clear">清除数据</string>
    <string name="database_hint">保存点什么</string>
    <string name="top_bar_title">TopBar</string>
    <string name="top_bar_left">VISIBLE</string>
    <string name="top_bar_right">GONE</string>
    <string name="btn_music_rect">Music Rect</string>
    <string name="btn_view_group">View Group</string>
    <string name="text_view_content">ABCDEFG HIJKLMN OPQRST UVWXYZ</string>
</resources>
