<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_database" />

    <Button
        android:id="@+id/btn_content_provider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_content_provider" />

    <Button
        android:id="@+id/btn_custom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_custom_view" />

    <Button
        android:id="@+id/btn_motion_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_motion_event" />

    <Button
        android:id="@+id/btn_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_scroll" />

    <Button
        android:id="@+id/btn_xml_paint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_xml_paint" />

</LinearLayout>